# nicla-sense-me

./: .gitmodules
app/: CMakeLists.txt  debug.conf  prj.conf
app/boards/: arduino_nicla_sense_me.overlay
app/src/: main.c
app/src/app/: app.c  app.h  common.h
app/src/bhi_acc_gyro/: CMakeLists.txt  acc_gyro.c  acc_gyro.h
app/src/bhi_common/: CMakeLists.txt  common.c  common.h
app/src/bhi_euler/: CMakeLists.txt  euler.c  euler.h
app/src/bhi_klio/: CMakeLists.txt  klio.c  klio.h
app/src/bluetooth/: ble_defines.h  ble_manager.c  ble_manager.h  ble_nicla_control.c  ble_nicla_control.h  nicla_service.c  nicla_service.h
app/src/nicla_sd/: CmakeLists.txt  nicla_sd.c  nicla_sd.h
app/src/nicla_zbus/: CMakeLists.txt  nicla_zbus.c  nicla_zbus.h
app/src/sensors/: CMakeLists.txt  sensor_buffer.c  sensor_buffer.h
app/src/sensors/imu/: CMakeLists.txt  imu.c  imu.h
drivers/: CMakeLists.txt  Kconfig
drivers/charger/: CMakeLists.txt  Kconfig
drivers/charger/bq25120a/: CMakeLists.txt  Kconfig  bq25120a.c
drivers/led/: CMakeLists.txt  Kconfig
drivers/led/is31fl3194/: CMakeLists.txt  Kconfig  is31fl3194.c
dts/bindings/charger/: ti,bq25120a.yaml
dts/bindings/led/: issi,is31fl3194.yaml
include/app/drivers/: bq25120a.h
lib/: CMakeLists.txt  Kconfig
lib/BHI260AP/: CMakeLists.txt  Kconfig
